<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.p1xel</groupId>
    <artifactId>NoBuildPlus</artifactId>
    <version>1.6.21</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-wrapper-plugin</artifactId>
                <version>3.3.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>com.tcoded.folialib</pattern>
                            <!-- !! MAKE SURE TO CHANGE THIS TO YOUR PLUGIN'S GROUP & PLUGIN NAME !! -->
                            <shadedPattern>p1xel.nobuildplus.lib.folialib</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>tcoded-releases</id>
            <url>https://repo.tcoded.com/releases</url>
        </repository>

        <repository>
            <id>matteodev</id>
            <url>https://maven.devs.beer/</url>
        </repository>

        <repository>
            <id>craftengine</id>
            <url>https://repo.momirealms.net/releases/</url>
        </repository>

    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.11-R0.2-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.tcoded</groupId>
            <artifactId>FoliaLib</artifactId>
            <version>0.5.1</version>
            <scope>compile</scope>
        </dependency>

        <!--> Residence <!-->
        <dependency>
            <groupId>com.bekvon</groupId>
            <artifactId>residence-api</artifactId>
            <version>5.1.6.4</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/Residence5.1.6.4.jar</systemPath>
        </dependency>

        <!--> Dominion <!-->
        <dependency>
            <groupId>cn.lunadeer</groupId>
            <artifactId>DominionAPI</artifactId>
            <version>4.3</version>
            <scope>provided</scope>
        </dependency>

        <!--> ItemsAdder <!-->
        <dependency>
            <groupId>dev.lone</groupId>
            <artifactId>api-itemsadder</artifactId>
            <!-- Replace {version} with the latest version -->
            <version>4.0.10</version>
            <scope>provided</scope>
        </dependency>

        <!--> BlockRegen <!-->
        <dependency>
            <groupId>nl.aurorion.blockregen</groupId>
            <artifactId>BlockRegen</artifactId>
            <version>3.31.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/BlockRegen-3.31.0.jar</systemPath>
        </dependency>

    </dependencies>
</project>